# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import usersRouter from "./users";
 import fixturesRouter from "./fixtures";
 import postsRouter from "./posts";
+import leaderboardRouter from "./leaderboard";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(usersRouter);
 router.use(fixturesRouter);
 router.use(postsRouter);
+router.use(leaderboardRouter);
 
 export default router;
